@@ -1,5 +1,6 @@
 @echo off
 REM
+REM  Copyright (c) 2024, 2025 Contributors to the Eclipse Foundation
 REM  Copyright (c) 2018 Oracle and/or its affiliates. All rights reserved.
 REM
 REM  This program and the accompanying materials are made available under the
@@ -15,5 +16,21 @@ REM
 REM  SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
 REM
 
+VERIFY OTHER 2>nul
+setlocal ENABLEEXTENSIONS
+if ERRORLEVEL 0 goto ok
+echo "Unable to enable extensions"
+exit /B 1
 
-java -jar "%~dp0..\modules\admin-cli.jar" start-domain --verbose %*
+:ok
+set AS_INSTALL=%~dp0..
+call "%AS_INSTALL%\config\asenv.bat"
+if "%AS_JAVA%x" == "x" goto UsePath
+set JAVA=%AS_JAVA%\bin\java
+goto run
+
+:UsePath
+set JAVA=java
+
+:run
+"%JAVA%" %ASADMIN_JVM_OPTIONS% --module-path "%ASADMIN_MODULEPATH%" --add-modules ALL-MODULE-PATH -cp "%ASADMIN_CLASSPATH%" com.sun.enterprise.admin.cli.AdminMain start-domain --verbose %*
